--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -1,13 +1,15 @@
 <div class="cart_item_box" data-snip="item">
   <img class="thumb" />
-  <div class="cart_item">
-    <ul>
-      <li><span class="cart_title"></span></li>
-      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /></li>
-      <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
-    </ul>
-  </div>
-  <div class="column del_cart_item">
-    <a href="#"><img src="/static/images/close.png" /></a>
+  <div class="cart_item_content">
+    <div class="cart_item">
+      <ul>
+        <li><span class="cart_title"></span></li>
+        <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /></li>
+        <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
+      </ul>
+    </div>
+    <div class="column del_cart_item">
+      <a href="#"><img src="/static/images/close.png" /></a>
+    </div>
   </div>
 </div>
