--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -91,6 +91,10 @@
                     <div class="row">
                       <label for="edit_stock" data-loc="stock"></label> <input id="edit_stock" type="text" name="edit_stock" />
                     </div>
+                    <div class="row">
+                      <input id="edit_unique" type="checkbox" name="edit_unique" />
+                      <label for="edit_unique" data-loc="unique.product"></label> 
+                    </div>
                   </div>
                   <div class="column left10">
                     <div class="select_row">
