--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -53,7 +53,7 @@ input[type=checkbox] {
 input[type="checkbox"]+label {
 	background: url('/static/images/unchecked_checkbox.png') no-repeat;
 	height: 26px;
-	padding-right: 42px;
+	padding-right: 35px;
 	background-position: right;
 }
 
@@ -214,11 +214,14 @@ a:active {
 	box-shadow: inset 0px 0px 1px 1px #dddddd;
     height: 216px;
     width: 156px;
+    position: relative;
+    z-index: 0;
 }
 
 .cat_box:hover {
 	cursor: pointer;
 	box-shadow: 0px 0px 55px 1px rgba(0,0,0,0.75);
+    z-index: 1;
 }
 
 
@@ -228,10 +231,11 @@ a:active {
 	border-radius: 10px;
 	z-index: 0;
 	position: relative;
+	box-shadow: inset 0px 0px 1px 1px #dddddd;
+	overflow: hidden;
 }
 
 .item_box:hover {
-    border-radius: 10px;
     box-shadow: 0px 0px 75px 1px rgba(0,0,0,0.75);
     z-index : 1;
 	cursor: pointer;
@@ -250,19 +254,18 @@ a:active {
     background: #555555;
     color: #ffffff;
     border-radius: 0 0 10px 10px;
-    border: 1px solid #dddddd;
     height: 68px;
     margin: 0;
     position: relative;
-    top: 314px;
-    width: 310px;
+    top: 316px;
+    width: 100%;
 }
 
 .cat_info_tag {
     border: none;
     top: 138px;
-    width: 154px;
-    height: 37px;
+    width: 100%;
+    height: 38px;
 }
 
 .edit_tag {
@@ -277,6 +280,7 @@ a:active {
     top: 5px;
     padding-left: 5px;
     display: none;
+    z-index: 1;
 }
 
 .info_tag_price {
@@ -358,7 +362,6 @@ h1 {
 	float: left;
 	overflow-y: auto;
 	overflow-x: hidden;
-	width: 430px;
 }
 
 #cart_popup {
@@ -395,9 +398,10 @@ h1 {
 #cart_footer {
 	margin-bottom: 20px;
 	position: relative;
-	width: 100%;
 	float: left;
+	clear: both;
 	border-top: 1px solid #dddddd;
+	width: 100%;
 }
 
 #cart_footer a {
@@ -462,7 +466,7 @@ h1 {
 	box-shadow: 0px 0px 10px #999;
 	border-radius: 10px;
 	display: inline-block;
-	width: 100%;
+	width: 400px;
 }
 
 .cart_item {
@@ -470,7 +474,7 @@ h1 {
 	margin-left: 25px;
 	margin-top: 10px;
 	overflow: hidden;
-	width: 250px;
+	width: 230px;
 }
 
 .cart_item ul li {
@@ -547,7 +551,6 @@ h1 {
 .upload_form_fields .fields {
     float: left;
     width: 100%;
-    height: 350px;
     overflow: auto;
 }
 
@@ -722,7 +725,8 @@ h1 {
 	position: relative;
 	float: right;
 	left: 10px;
-	width: 120px;
+	top: 3px;
+	width: 90px;
 }
 
 #logo a {
@@ -1114,9 +1118,15 @@ h1 {
   top: 15px;
 }
 
+.cart_item_content {
+  float: left;
+  width: 290px;
+}
+
 .del_cart_item {
   margin-top: 5px;
-  margin-right: 3px;
+  float:left;
+  position: relative;
 }
 
 #fb-share-button {
@@ -1133,4 +1143,21 @@ h1 {
 
 #fileselect {
   max-width: 280px;
+}
+
+.unique_label {
+  width: 200px;
+  background: #e43;
+  position: absolute;
+  text-align: center;
+  line-height: 40px;
+  letter-spacing: 1px;
+  color: #f0f0f0;
+  top: 15px;
+  right: -60px;
+  left: auto;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  background: #e60;
+  font-size: 20px;
 }
