--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -2,6 +2,7 @@
 <head>
 
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Julee' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
@@ -40,9 +41,14 @@
           <div>
             <input id="search_text" type="text" />
           </div>
-        </div>
+        </div>        
         <div id="logo" class="top_items">
-          <a href="/"><img src="/static/images/logo-small.png" /></a>
+          <a href="/">
+          <span>I </span>
+          <span>d</span>
+          <span>i</span>
+          <span>d</span>
+          </a>
         </div>
         <div class="fb_area top_items"></div>
       </div>
