--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -632,6 +632,7 @@ h1 {
 .preview {
    display: none;
    overflow: auto;
+   height: 250px;
 }
 
 .left {
@@ -724,9 +725,27 @@ h1 {
 #logo {
 	position: relative;
 	float: right;
-	left: 10px;
-	top: 3px;
+	left: 0px;
+	top: 15px;
 	width: 90px;
+}
+
+#logo span {
+    font-family: 'Julee', cursive;
+    font-size: 48px;
+}
+
+#logo span:nth-child(1) {
+    color: #00ee00;
+}
+#logo span:nth-child(2) {
+    color: #00aa00;
+}
+#logo span:nth-child(3) {
+    color: #FF7519;
+}
+#logo span:nth-child(4) {
+    color: #009900;
 }
 
 #logo a {
