--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -10,6 +10,7 @@
             <img src="/static/images/close.png" />
          </div>
       </div>
+      <div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
       <div class="info_tag">
         <div class="info_tag_text"></div>
         <div class="info_tag_cart">
