--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -75,6 +75,11 @@
           <li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
         </ul>
       </div>
+      <div class="column left30">
+        <ul>
+          <li><a href="/cookies" data-loc="data.cookies.link"></a></li>
+        </ul>
+      </div>      
     </div>
   </div>
 
