--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -235,7 +235,7 @@ a:active {
 
 .cat_box:hover {
 	cursor: pointer;
-	box-shadow: 0px 0px 40px 1px rgba(50, 50, 50, 0.45);
+	box-shadow: 0px 0px 20px 1px rgba(50, 50, 50, 0.45);
 	z-index: 1;
 }
 
@@ -250,7 +250,7 @@ a:active {
 }
 
 .item_box:hover {
-	box-shadow: 0px 0px 40px 1px rgba(50, 50, 50, 0.45);
+	box-shadow: 0px 0px 20px 1px rgba(50, 50, 50, 0.45);
 	z-index: 1;
 	cursor: pointer;
 	position: relative;
@@ -755,15 +755,19 @@ h1 {
 }
 
 #logo span:nth-child(2) {
-	color: #00aa00;
+	color: #00ee00;
+	font-size: 24px;
+	top: 0px;
 }
 
 #logo span:nth-child(3) {
 	color: #FF7519;
+	font-size: 32px;
 }
 
 #logo span:nth-child(4) {
-	color: #009900;
+	color: #00ee00;
+	font-size: 24px;
 }
 
 #logo a {
