--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -42,7 +42,7 @@
         </div>
         <div id="prod_specs" class="prod_specs tab_content">
           <div data-snip="specs">
-            <div class="row">
+            <div class="row_simple">
               <div class="column1">
                 <span class="prop_name"></span>
               </div>
