--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -14,7 +14,7 @@
       <div class="info_tag">
         <div class="info_tag_text"></div>
         <div class="info_tag_cart">
-          <img src="/static/images/cart.png" />
+          <img src="/static/images/cart_black.png" />
         </div>
         <div class="info_tag_price"></div>
       </div>
