--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -4,7 +4,7 @@
     <div class="cart_item">
       <ul>
         <li><span class="cart_title"></span></li>
-        <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /></li>
+        <li><span data-loc="quantity" /> <input type="text" maxlength="3" size="3" /></li>
         <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
       </ul>
     </div>
