--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -79,10 +79,10 @@
                       <label for="edit_title" data-loc="title"></label><input id="edit_title" type="text" name="edit_title" />
                     </div>
                     <div class="row">
-                      <label for="edit_price" data-loc="price"></label><input id="edit_price" type="number" name="edit_price" />
+                      <label for="edit_price" data-loc="price"></label><input id="edit_price" type="text" name="edit_price" />
                     </div>
                     <div class="row">
-                      <label for="edit_discount_price" data-loc="discount.price"></label><input id="edit_discount_price" type="number"
+                      <label for="edit_discount_price" data-loc="discount.price"></label><input id="edit_discount_price" type="text"
                         name="edit_discount_price" />
                     </div>
                     <div class="row">
