--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -1,5 +1,7 @@
 
 <div class="product_content quickview">
+  <meta data-snip="fb_meta"/>
+  
   <div class="title_dialog">
     <h1 data-snip="title"></h1>
   </div>
