--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -91,9 +91,7 @@
   </div>
 
   <div id="newuser_popup">
-    <div class="title_dialog">
-      <h2 data-loc="new.user"></h2>
-    </div>
+    <div class="title_dialog" data-loc="new.user"></div>
     <div class="close_dialog">
       <img src="/static/images/close.png" />
     </div>
