--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -1,10 +1,9 @@
 
 <div class="product_content quickview">
-  <meta data-snip="fb_meta"/>
-  
-  <div class="title_dialog">
-    <h1 data-snip="title"></h1>
-  </div>
+  <meta data-snip="fb_meta" />
+
+  <div class="title_dialog" data-loc="title"></div>
+
   <div class="close_product_dialog">
     <img src="/static/images/close.png" />
   </div>
@@ -19,8 +18,8 @@
     <div id="pright">
       <div class="prod_details">
         <div class="prod_header">
-          <div id="fb-share-button" >
-            <a href="#"><img src="/static/images/facebook.png"/></a>
+          <div id="fb-share-button">
+            <a href="#"><img src="/static/images/facebook.png" /></a>
           </div>
           <div id="add_to_cart_box">
             <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
@@ -94,14 +93,13 @@
                       <label for="edit_stock" data-loc="stock"></label> <input id="edit_stock" type="text" name="edit_stock" />
                     </div>
                     <div class="row">
-                      <input id="edit_unique" type="checkbox" name="edit_unique" />
-                      <label for="edit_unique" data-loc="unique.product"></label> 
+                      <input id="edit_unique" type="checkbox" name="edit_unique" /> <label for="edit_unique" data-loc="unique.product"></label>
                     </div>
                   </div>
                   <div class="column left10">
                     <div class="select_row">
-                      <label for="edit_categories" data-loc="categories"></label> <select id="edit_categories" multiple="multiple"
-                        data-snip="catlist" name="edit_categories"></select>
+                      <label for="edit_categories" data-loc="categories"></label> <select id="edit_categories" multiple="multiple" data-snip="catlist"
+                        name="edit_categories"></select>
                     </div>
                   </div>
                 </div>
