--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -5,7 +5,7 @@
       <ul>
         <li><span class="cart_title"></span></li>
         <li><span data-loc="quantity" /> <input type="text" maxlength="3" size="3" /></li>
-        <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
+        <li><span data-loc="price" /> <span class="cart_price"></span> <span>Lei</span></li>
       </ul>
     </div>
     <div class="column del_cart_item">
