--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -246,7 +246,7 @@
       </div>
     </div>
     <div id="cart_footer">
-      <span id="total">0 RON</span> <a id="buy_step1" href="#" data-loc="buy_step1"></a> <a id="terms_link" href="/terms" target="_blank"
+      <span id="total">0 Lei</span> <a id="buy_step1" href="#" data-loc="buy_step1"></a> <a id="terms_link" href="/terms" target="_blank"
         data-loc="terms.link"></a> <a id="buy_step0" href="#" data-loc="buy_step0"></a>
     </div>
   </div>
