--- a/shopweb/web/templates/order_company_ro.html
+++ b/shopweb/web/templates/order_company_ro.html
@@ -159,7 +159,7 @@ table tr th {
       </table>
       <div class="total">
         <h3>
-          Total <span data-snip="total"></span> RON
+          Total <span data-snip="total"></span> Lei
         </h3>
       </div>
     </div>
