--- a/shopweb/web/templates/ordersview.html
+++ b/shopweb/web/templates/ordersview.html
@@ -27,7 +27,7 @@
       </table>
 
       <div class="row_simple top20">
-        <span data-loc="total"></span> <span class="total"></span> RON
+        <span data-loc="total"></span> <span class="total"></span> Lei
       </div>
     </div>
 
