--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -2,7 +2,9 @@
 <div class="product_content quickview">
   <meta data-snip="fb_meta" />
 
-  <div class="title_dialog" data-loc="title"></div>
+  <div class="title_dialog">
+     <span data-snip="title"></span>
+  </div>
 
   <div class="close_product_dialog">
     <img src="/static/images/close.png" />
