--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -54,19 +54,20 @@
       <div class="column">
         <ul>
           <li>Copyright (c) 2014</li>
-          <li>Contact: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
-          <li><a href="/terms" data-loc="terms.link"></a></li>
+          <li>E-mail: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
+          <li>Telefon: 0724-556226</li>
         </ul>
       </div>
       <div class="column left30">
         <ul>
+          <li><a href="/terms" data-loc="terms.link"></a></li>
           <li><a href="/dataprotection" data-loc="data.protection.link"></a></li>
           <li><a href="/returnpolicy" data-loc="return.policy.link"></a></li>
-          <li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
         </ul>
       </div>
       <div class="column left30">
         <ul>
+          <li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
           <li><a href="/cookies" data-loc="data.cookies.link"></a></li>
         </ul>
       </div>
