--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -3,7 +3,7 @@
   <meta data-snip="fb_meta" />
 
   <div class="title_dialog">
-     <span data-snip="title"></span>
+    <span data-snip="title"></span>
   </div>
 
   <div class="close_product_dialog">
@@ -37,6 +37,7 @@
           <ul id="product_details_tab">
             <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
             <li><a href="#prod_specs" data-loc="specs"></a></li>
+            <li><a href="#prod_customize" data-loc="customize"></a></li>
             <li id="edit_tab" data-permissions="write"><a href="#edit" data-loc="edit"></a></li>
           </ul>
         </div>
@@ -56,6 +57,14 @@
           </div>
         </div>
 
+        <div id="prod_customize" class="prod_specs tab_content">
+          <div data-snip="customize">
+            <div class="row_simple top10">
+              <span class="content"></span>
+            </div>
+          </div>
+        </div>
+
         <div id="edit" class="tab_content" data-permissions="write">
 
           <form id="edit_form" method="POST" data-snip="edit">
@@ -67,6 +76,7 @@
                   <li class="active"><a href="#edit_fields" data-loc="product.info"></a></li>
                   <li><a href="#edit_specs" data-loc="specs"></a></li>
                   <li><a href="#edit_textzone" data-loc="description"></a></li>
+                  <li><a href="#edit_customize" data-loc="customize"></a></li>
                   <li><a href="#edit_files" data-loc="files"></a></li>
                 </ul>
               </div>
@@ -113,9 +123,7 @@
                 </div>
                 <div id="edit_prop_fields" class="row">
                   <div class="edit_props_sample">
-                    <k:input type='text' name='pkey' />
-                    <v:input type='text' name='pval' />
-                    <img class='clickable' src='/static/images/minus.png' />
+                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <img class='clickable' src='/static/images/minus.png' />
                   </div>
                 </div>
               </div>
@@ -130,6 +138,34 @@
                 <textarea class="edit_toggle" id="edit_description" name="edit_description"></textarea>
                 <div class="edit_toggle preview" id="edit_description_view"></div>
               </div>
+
+              <div id="edit_customize" class="form_specs tab_content">
+                <ul>
+                  <li>
+                    <div class="specs_title" data-loc="add.options"></div> <img id="add_edit_custom_prop" class="clickable"
+                    src="/static/images/plus.png" />
+                  </li>
+                  <li>
+                    <div class="specs_title" data-loc="add.text"></div> <img id="add_edit_custom_text" class="clickable" src="/static/images/plus.png" />
+                  </li>
+                </ul>
+                <div id="prop_edit_custom_fields" class="row">
+                  <div class="edit_user_options">
+                    <div class="edit_custom_options_sample">
+                      <div class='row'>
+                        <input type='text' name='customkey' /> <input type='text' name='customval' /> <img class='clickable'
+                          src='/static/images/minus.png' />
+                      </div>
+                    </div>
+                    <div class="edit_custom_text_sample">
+                      <div class='row'>
+                        <input type='text' name='customtext' /> <img class='clickable' src='/static/images/minus.png' />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div id="edit_files" class="tab_content">
                 <input type="file" id="fileselect" name="files" multiple="multiple" />
               </div>
